# ghostpad2

./: .gitignore  LICENSE  README.md  README_TOOLS.md  pyproject.toml  start.cmd  start.ps1  start.sh
api/: __init__.py  config.py  main.py  middleware.py
api/routers/: __init__.py  chat.py  conversations.py  kv.py  library.py  messages.py  personas.py  settings.py  tools.py  websocket.py
frontend/: components.json  index.html  package-lock.json  package.json  vite.config.ts  vite.dev.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/context/: ChatStreamingContext.tsx  ConversationContext.tsx  SettingsContext.tsx  WebSocketContext.tsx
frontend/src/hooks/: index.ts  useChatActions.ts  useConversations.ts  useMessageActions.ts  usePromptSuggestion.ts  useRouter.ts  useScrolling.ts  useSettings.ts  useToolFeatures.ts  useWebSocket.ts
frontend/src/types/: index.ts
models/: __init__.py  conversation.py  conversation_persona.py  library_snippet.py  message.py  message_attachment.py  persona.py
services/: __init__.py  ai_service.py  chat_service.py  conversation_service.py  data_access_service.py  kv_store_service.py  library_service.py  log_service.py  persona_service.py  sse_service.py  state_service.py  suggestion_service.py  system_prompt_service.py  tool_service.py  websocket_service.py
tools/core/: browser.py  clothing.py  combat.py  currency.py  director.py  guidance.py  guidelines.py  mood_ui.py  narrate.py  private_messaging.py  thinking.py
utils/: __init__.py  constants.py  response_context.py  tool_utils.py
(+61 files in other folders)
